Arregle enlaces en footer tienda.html

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -100,7 +100,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Moda/Adidas courtmaster.jpg" alt="Adidas courtmaster">
+                        <img src="../assets/images/zapatillas/Adidas/Moda/adidas courtmaster.jpg" alt="Adidas courtmaster">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -136,7 +136,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Moda/Adidas broma.jpg" alt="Adidas Broma">
+                        <img src="../assets/images/zapatillas/Adidas/Moda/adidas broma.jpg" alt="Adidas Broma">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -172,7 +172,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Moda/Adidas lite byd 2.0.jpg" alt="Adidas lite byd 2.0">
+                        <img src="../assets/images/zapatillas/Adidas/Moda/adidas lite byd 2.0.jpg" alt="Adidas lite byd 2.0">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -208,7 +208,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Moda/Adidas breaknet.jpg" alt="Adidas breaknet">
+                        <img src="../assets/images/zapatillas/Adidas/Moda/adidas breaknet.jpg" alt="Adidas breaknet">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -246,7 +246,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Running/Adidas eq21.jpg" alt="Adidas eq21">
+                        <img src="../assets/images/zapatillas/Adidas/Running/adidas eq21.jpg" alt="Adidas eq21">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -282,7 +282,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Running/Adidas galaxy.jpg" alt="Adidas galaxy">
+                        <img src="../assets/images/zapatillas/Adidas/Running/adidas galaxy.jpg" alt="Adidas galaxy">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -318,7 +318,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Running/Adidas supernova.jpg" alt="Adidas supernova">
+                        <img src="../assets/images/zapatillas/Adidas/Running/adidas supernova.jpg" alt="Adidas supernova">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -598,19 +598,19 @@
                     <nav class="navFooter text-center">
                         <ul class="d-flex flex-column flex-lg-row align">
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="index.html">Inicio</a>
+                                <a href="../index.html">Inicio</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="pages/tienda.html">Tienda</a>
+                                <a href="tienda.html">Tienda</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="pages/nosotros.html">Nosotros</a>
+                                <a href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="pages/preguntasFrecuentes.html">faq's</a>
+                                <a href="preguntasFrecuentes.html">faq's</a>
                             </li>
                             <li class="my-1 mx-4 subrayadoEnlace">
-                                <a href="pages/contacto.html">Contacto</a>
+                                <a href="contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </nav>
