modifique nav faqs movile

--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -71,6 +71,59 @@
     <main class="cuerpoFaqs">
         <section>
             <div id="inicio">
+                
+                <div class="navegacionFaqsMovile">
+                    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-interval="false">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 4"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="navegacionFaqsMovile__logo">
+                                    <i class="fa-solid fa-chart-column"></i>
+                                    <a href="#stock">Consulta de Stock</a>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="navegacionFaqsMovile__logo">
+                                    <i class="fa-solid fa-rotate"></i>
+                                    <a href="#cambios">Cambios y Devoluciones</a>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="navegacionFaqsMovile__logo">
+                                    <i class="fa-solid fa-truck-fast"></i>
+                                    <a href="#envios">Envios y Seguimiento</a>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="navegacionFaqsMovile__logo">
+                                    <i class="fa-regular fa-credit-card"></i>
+                                    <a href="#pagos">Formas de Pago</a>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="navegacionFaqsMovile__logo">
+                                    <i class="fa-regular fa-circle-question"></i>
+                                    <a href="#otras">Preguntas Generales</a>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+                
                 <div class="navegacionFaqs">
                     <div class="navegacionFaqs__logo">
                         <i class="fa-solid fa-chart-column"></i>
