--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -88,7 +88,7 @@
                 <div class="antesDos">
                     <div class="linea linea__uno"></div>
                 </div>
-                <h2 class="tituloDos">Adidas</h2>
+                <h2 class="tituloDos" id="adidas">Adidas</h2>
                 <div class="despuesDos">
                     <div class="linea linea__dos"></div>
                 </div>
@@ -354,7 +354,7 @@
                 <!-- Producto -->
                 <div class="producto agrandarTarjeta">
                     <div class="producto__img">
-                        <img src="../assets/images/zapatillas/Adidas/Running/Adidas x9000l2.jpg" alt="Adidas x9000l2">
+                        <img src="../assets/images/zapatillas/Adidas/Running/adidas x9000l2.jpg" alt="Adidas x9000l2">
                         <span class="iconoCorazon">
                             <i class="far fa-heart"></i>
                         </span>
@@ -540,22 +540,22 @@
                     <a class="page-link" href="#">Anterior</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="tienda.html">1</a>
+                    <a class="page-link" href="tienda.html#adidas">1</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="productos/nike.html">2</a>
+                    <a class="page-link" href="productos/nike.html#nike">2</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="productos/puma.html">3</a>
+                    <a class="page-link" href="productos/puma.html#puma">3</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="productos/topper.html">4</a>
+                    <a class="page-link" href="productos/topper.html#topper">4</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="productos/underArmour.html">5</a>
+                    <a class="page-link" href="productos/underArmour.html#under">5</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="productos/nike.html">Siguiente</a>
+                    <a class="page-link" href="productos/nike.html#nike">Siguiente</a>
                 </li>
             </ul>
         </section>
