--- a/pages/productos/topper.html
+++ b/pages/productos/topper.html
@@ -87,7 +87,7 @@
                 <div class="antesDos">
                     <div class="linea linea__uno"></div>
                 </div>
-                <h2 class="tituloDos">Topper</h2>
+                <h2 class="tituloDos" id="topper">Topper</h2>
                 <div class="despuesDos">
                     <div class="linea linea__dos"></div>
                 </div>
@@ -536,25 +536,25 @@
             <!-- Paginación -->
             <ul class="pagination">
                 <li class="page-item">
-                    <a class="page-link" href="puma.html">Anterior</a>
+                    <a class="page-link" href="puma.html#puma">Anterior</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="../tienda.html">1</a>
+                    <a class="page-link" href="../tienda.html#adidas">1</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="nike.html">2</a>
+                    <a class="page-link" href="nike.html#nike">2</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="puma.html">3</a>
+                    <a class="page-link" href="puma.html#puma">3</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="topper.html">4</a>
+                    <a class="page-link" href="topper.html#topper">4</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="underArmour.html">5</a>
+                    <a class="page-link" href="underArmour.html#under">5</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="underArmour.html">Siguiente</a>
+                    <a class="page-link" href="underArmour.html#under">Siguiente</a>
                 </li>
             </ul>
         </section>
