Modifique pagina nosotros.html

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,70 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conoce mas sobre nosotros</title>
-    <meta name="description"
-        content="Estamos comprometidos con nuestro cliente, tu satisfaccion es nuestra satisfaccion.">
-    <meta name="keywords"
-        content="SNK, Tienda, Zapatillas, Precio, Calidad, Envio Gratis, La Plata, Adidas, Nike, Puma, Topper, Reebok, Under Armour, Crocs, Asics, John Foos, Head, Kappa, Lacoste, New Balance, Reef, Reusch, Umbro, Vans, Wilson, Running, Entrenamiento, Moda, Stock, Cambios, Devoluciones">
+    <meta name="description" content="Estamos comprometidos con nuestro cliente, tu satisfaccion es nuestra satisfaccion.">
+    <meta name="keywords" content="SNK, Tienda, Zapatillas, Precio, Calidad, Envio Gratis, La Plata, Adidas, Nike, Puma, Topper, Reebok, Under Armour, Crocs, Asics, John Foos, Head, Kappa, Lacoste, New Balance, Reef, Reusch, Umbro, Vans, Wilson, Running, Entrenamiento, Moda, Stock, Cambios, Devoluciones">
     <!-- Favicon -->
     <link rel="shortcut icon" href="../assets/images/favicon/favicon.ico" type="image/x-icon">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Estilos CSS -->
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body class="contenedorGrid container-fluid">
-    <header class="row encabezado" style="background-image: url(../assets/images/portadas/portada-nosotros.jpg); background-position: center; background-size: cover;">
+    <!-- Header -->
+    <header class="row headerPaginas" style="background-image: url(../assets/images/portadas/portada-nosotros.jpg)">
         <div>
             <nav class="navbar navbar-expand-lg row" style="z-index: 2;">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html">
-                        <img src="../assets/images/iconos/logo.png" alt="logo">
+                        <img src="../assets/images/iconos/logo.png" alt="Icono SNK">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span><i class="fa-solid fa-bars"></i></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto d-flex align-items-center mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link mx-4 desplazamientoCentro" href="../index.html">Inicio</a>
+                                <a class="nav-link mx-4 subrayadoEnlace" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 desplazamientoCentro" href="tienda.html">Tienda</a>
+                                <a class="nav-link mx-4 subrayadoEnlace" href="tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 desplazamientoCentro" href="nosotros.html">Nosotros</a>
+                                <a class="nav-link mx-4 subrayadoEnlace" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-4 desplazamientoCentro" href="preguntasFrecuentes.html">Faq's</a>
+                                <a class="nav-link mx-4 subrayadoEnlace" href="preguntasFrecuentes.html">Faq's</a>
                             </li>
-                            <li class="nav-item mx-4 desplazamientoCentro">
-                                <a class="nav-link" href="contacto.html">Contacto</a>
+                            <li class="nav-item">
+                                <a class="nav-link mx-4 subrayadoEnlace" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
                         <form class="buscador d-flex" role="search">
-                            <input class="buscador__input form-control me-2" type="search"
-                                placeholder="Encontra lo que buscas" aria-label="Search">
-                            <button class="botonBuscador btn btn-outline-success" type="submit"><i
-                                    class="fa-solid fa-magnifying-glass"></i></button>
+                            <input class="buscador__input form-control me-2" type="search" placeholder="Encontra lo que buscas" aria-label="Search">
+                            <button class="botonBuscador btn btn-outline-success" type="submit">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
                         </form>
                     </div>
                 </div>
             </nav>
         </div>
-        <h1 class="tituloHeader text-center aparicionTexto">Nosotros</h1>
+        <div class="contenedorH1">
+            <h1 class="tituloPreguntasFrecuentes aparicionTexto">
+                Nosotros
+            </h1>
+        </div>
     </header>
+    <!-- Main -->
     <main class="cuerpoNosotros">
         <section class="nosotros">
             <div class="nosotros__info">
@@ -110,41 +107,74 @@
             </div>
         </section>
         <section>
-            <div class="satisfaccionClientes">
-                <div class="satisfaccionClientes__clientesFelices">
-                    <div class="decoracionTitulo">
-                        <h2 class="clientesFelices__titulo">Clientes felices</h2>
+            <div class="infoClientes">
+                <div class="contenedorTitulo">
+                    <div class="antes">
+                        <div class="linea linea__uno"></div>
+                    </div>
+                    <h2 class="titulo">Clientes Felices</h2>
+                    <div class="despues">
+                        <div class="linea linea__dos"></div>
                     </div>
                 </div>
-                <div class="satisfaccionClientes__opiniones">
+                <div class="clientesFelices">
                     <div class="opinion">
                         <img src="../assets/images/nosotros/persona1.jpg" alt="persona-comentario">
                         <p><span>Malena Giménez </span>, La Plata</p>
-                        <p>"La entrega del pedido ha sido rapida y el producto me ha encantado. Las zapatillas son muy
-                            lindas y cómodas."</p>
+                        <p>"La entrega del pedido ha sido rapida y el producto me ha encantado. Las zapatillas son muy lindas y cómodas."</p>
                     </div>
                     <div class="opinion">
                         <img src="../assets/images/nosotros/persona2.jpg" alt="persona-comentario">
                         <p><span>Hipólito Fernández</span>, Buenos Aires</p>
-                        <p>"Soy cliente de SNK hace mucho tiempo, la variedad de marcas y modelos son uno de los
-                            motivos, la atención recibida siempre fue excelente."</p>
+                        <p>"Soy cliente de SNK hace mucho tiempo, la variedad de marcas y modelos son uno de los motivos, la atención recibida siempre fue excelente."</p>
                     </div>
                     <div class="opinion">
                         <img src="../assets/images/nosotros/persona3.jpg" alt="persona-comentario">
                         <p><span>María José Ramirez</span>, Berisso</p>
-                        <p>"Excelente atención, muy conforme. Destacó que si tenes que hacer cambio en la compra te
-                            facilitan el cambió sin problemas."</p>
+                        <p>"Excelente atención, muy conforme. Destacó que si tenes que hacer cambio en la compra te facilitan el cambió sin problemas."</p>
                     </div>
                 </div>
             </div>
         </section>
+        <section>
+            <div class="infoUbicacion">
+                <div class="contenedorTitulo">
+                    <div class="antes">
+                        <div class="linea linea__uno"></div>
+                    </div>
+                    <h2 class="titulo">Visitanos</h2>
+                    <div class="despues">
+                        <div class="linea linea__dos"></div>
+                    </div>
+                </div>
+                <p>Recordá que podes venir a conocer nuestro local, estamos ubicados en pleno centro comercial de la Ciudad de La Plata. Acercate, nuestros vendedores te esperan para brindarte la atención que vos te mereces.</p>
+                <div class="ubicacion">
+                    <div id="carouselExampleSlidesOnly" class="ubicacion__local carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="/assets/images/local/local1.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/assets/images/local/local2.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/assets/images/local/local3.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
+                            </div>
+                        </div>
+                    </div>
+                    <iframe class="ubicacion__mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1375.5755849447899!2d-57.95381523396229!3d-34.91426479101938!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x787c6bcd86fcc4c5!2zMzTCsDU0JzUxLjMiUyA1N8KwNTcnMTAuNiJX!5e0!3m2!1ses!2sar!4v1653412749961!5m2!1ses!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
     </main>
+    <!-- Icono Whatsapp -->
     <div class="contenedorWhatsapp sombraWhatsapp">
         <a href="https://wa.me/1234567891?text=SNK%20|%20Tienda%20de%20zapatillas.%20Hacenos%20una%20consulta%20y%20te%20respondemos%20a%20la%20brevedad"
             target="_blank">
             <img src="../assets/images/iconos/whatsapp.png" class="botonWhatsapp" alt="Whatsapp">
         </a>
     </div>
+    <!-- Footer -->
     <footer class="row d-flex justify-content-center align-items-center py-3 pie">
         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-3 d-flex justify-content-around order-2 order-lg-1">
             <div class="redes d-flex flex-column justify-content-center">
