--- a/pages/preguntasFrecuentes.html
+++ b/pages/preguntasFrecuentes.html
@@ -22,8 +22,7 @@
 
 <body class="contenedorGrid container-fluid">
     <!-- Header -->
-    <header class="row headerPaginasFaqs"
-        style="background-image: url(../assets/images/portadas/portada-preguntas.jpg)">
+    <header class="row headerPaginasFaqs" style="background-image: url(../assets/images/portadas/portada-preguntas.jpg)">
         <div>
             <nav class="navbar navbar-expand-lg row" style="z-index: 2;">
                 <div class="container-fluid">
@@ -71,7 +70,6 @@
     <main class="cuerpoFaqs">
         <section>
             <div id="inicio">
-                
                 <div class="navegacionFaqsMovile">
                     <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-interval="false">
                         <div class="carousel-indicators">
@@ -123,7 +121,6 @@
                         </button>
                     </div>
                 </div>
-                
                 <div class="navegacionFaqs">
                     <div class="navegacionFaqs__logo">
                         <i class="fa-solid fa-chart-column"></i>
