Agregue slider a clientes felices movile

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -78,7 +78,7 @@
                         cliente y un trato amable.</p>
                 </div>
                 <div class="imagen">
-                    <img src="../assets/images/nosotros/nosotros-zapatillas.jpg" class="img-fluid" alt="Nosotros1">
+                    <img src="../assets/images/nosotros/nosotros1.jpg" class="img-fluid" alt="Nosotros1">
                 </div>
             </div>
             <div class="nosotros__info ">
@@ -90,7 +90,7 @@
                     </p>
                 </div>
                 <div class="imagen ordenDos">
-                    <img src="../assets/images/nosotros/nosotros-zapaillas2.jpg" class="img-fluid" alt="Nosotros2">
+                    <img src="../assets/images/nosotros/nosotros2.jpg" class="img-fluid" alt="Nosotros2">
                 </div>
             </div>
             <div class="nosotros__info">
@@ -102,7 +102,7 @@
                     </p>
                 </div>
                 <div class="imagen">
-                    <img src="../assets/images/nosotros/nosotros-zapatilla3.jpg" class="img-fluid" alt="Nosotros3">
+                    <img src="../assets/images/nosotros/nosotros3.jpg" class="img-fluid" alt="Nosotros3">
                 </div>
             </div>
         </section>
@@ -115,6 +115,46 @@
                     <h2 class="titulo">Clientes Felices</h2>
                     <div class="despues">
                         <div class="linea linea__dos"></div>
+                    </div>
+                </div>
+                <div class="clientesFelicesMovile">
+                    <div id="carouselExampleIndicatorsUno" class="carousel carousel-dark slide" data-bs-interval="false">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicatorsUno" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicatorsUno" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicatorsUno" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="opinion">
+                                    <img src="../assets/images/nosotros/persona1.jpg" alt="persona-comentario">
+                                    <p><span>Malena Giménez </span>, La Plata</p>
+                                    <p>"La entrega del pedido ha sido rapida y el producto me ha encantado. Las zapatillas son muy lindas y cómodas."</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="opinion">
+                                    <img src="../assets/images/nosotros/persona2.jpg" alt="persona-comentario">
+                                    <p><span>Hipólito Fernández</span>, Buenos Aires</p>
+                                    <p>"Soy cliente de SNK hace mucho tiempo, la variedad de marcas y modelos son uno de los motivos, la atención recibida siempre fue excelente."</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="opinion">
+                                    <img src="../assets/images/nosotros/persona3.jpg" alt="persona-comentario">
+                                    <p><span>María José Ramirez</span>, Berisso</p>
+                                    <p>"Excelente atención, muy conforme. Destacó que si tenes que hacer cambio en la compra te facilitan el cambió sin problemas."</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicatorsUno" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicatorsUno" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
                 <div class="clientesFelices">
@@ -152,13 +192,13 @@
                     <div id="carouselExampleSlidesOnly" class="ubicacion__local carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/assets/images/local/local1.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
+                                <img src="../assets/images/nosotros/local1.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
                             </div>
                             <div class="carousel-item">
-                                <img src="/assets/images/local/local2.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
+                                <img src="../assets/images/nosotros/local2.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
                             </div>
                             <div class="carousel-item">
-                                <img src="/assets/images/local/local3.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
+                                <img src="../assets/images/nosotros/local3.jpg" class="local d-block" style="height: 30rem;" alt="Nuestro local">
                             </div>
                         </div>
                     </div>
@@ -188,13 +228,13 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="d-flex justify-content-around">
-                            <a href="https://www.facebook.com/" target="_blank"><i
+                            <a class="efectoIcono" href="https://www.facebook.com/" target="_blank"><i
                                     class="fa-brands fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/" target="_blank"><i
+                            <a class="efectoIcono" href="https://www.instagram.com/" target="_blank"><i
                                     class="fa-brands fa-instagram"></i></a>
-                            <a href="https://twitter.com/" target="_blank"><i
+                            <a class="efectoIcono" href="https://twitter.com/" target="_blank"><i
                                     class="fa-brands fa-twitter-square"></i></a>
-                            <a href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
+                            <a class="efectoIcono" href="https://youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></i></a>
                         </div>
                     </div>
                 </div>
@@ -205,19 +245,19 @@
                 <div class="d-flex justify-content-around">
                     <nav class="navFooter text-center">
                         <ul class="d-flex flex-column flex-lg-row align">
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="../index.html">Inicio</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="tienda.html">Tienda</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="nosotros.html">Nosotros</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="preguntasFrecuentes.html">faq's</a>
                             </li>
-                            <li class="my-1 mx-4 desplazamientoCentro">
+                            <li class="my-1 mx-4 subrayadoEnlace">
                                 <a href="contacto.html">Contacto</a>
                             </li>
                         </ul>
