Arregle error en contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -72,7 +72,7 @@
     <!-- Main -->
     <main class="cuerpoContacto">
         <section>
-            <div class="infoTienda">
+            <div class="infoContacto">
                 <div class="contenedorTitulo">
                     <div class="antes">
                         <div class="linea linea__uno"></div>
